# BEVMatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
bevmatch/: __init__.py  grid_utils.py  nl.py  scene_graph.py  schema.py  spatial.py
bevmatch/alignment/: __init__.py  base.py  failure.py  se2.py  se3.py
bevmatch/benchmarks/: __init__.py  cards.py  leaderboard.py  splits.py  suite.py
bevmatch/change/: __init__.py  bev_diff.py  comparable.py  object_level.py  persistence.py  sequence.py
bevmatch/core/: __init__.py  datamodel.py  evidence.py  pipeline.py  registry.py
bevmatch/datasets/: __init__.py  loaders.py  synthetic.py
bevmatch/eval/: __init__.py  alignment_eval.py  change_eval.py  map_eval.py  metrics.py  retrieval_eval.py
bevmatch/integrations/: __init__.py  autoware.py  nav2.py  relocalization.py
bevmatch/io/: __init__.py  export.py
bevmatch/maps/: __init__.py  datamodel.py  report.py  severity.py
bevmatch/maps/validators/: __init__.py  occupancy.py  pointcloud.py  vectormap.py
bevmatch/plugins/: __init__.py  manifest.py
bevmatch/representations/: __init__.py  bev.py  semantic_bev.py
bevmatch/retrieval/: __init__.py  base.py  descriptor.py  descriptors.py  faiss_index.py  index.py  retriever.py
bevmatch/ros/: __init__.py  diagnostics.py  markers.py  node.py  replay.py  tf.py
bevmatch/sensors/: __init__.py  camera.py  radar.py
bevmatch/viz/: __init__.py  change.py  residual.py
docs/: api_compatibility.md  architecture.md  benchmarks.md  findings.md  plugin_authoring.md  report.md
docs/assets/: kitti_fusion_results.json  kitti_icp_verification_results.json  kitti_lidar_results.json  kitti_scancontext_config.json  kitti_vpr_learned_results.json  kitti_vpr_results.json  nclt_cross_session_default.json  nclt_cross_session_wide.json  nclt_lidar_results_default.json  nclt_lidar_results_wide.json  real_map_tiles.npz
examples/: __init__.py  ros2_lifecycle_node.py  run_alignment_eval.py  run_all_demos.py  run_autoware_nav2.py  run_benchmark_suite.py  run_change_eval.py  run_demo.py  run_map_validation.py  run_multimodal.py  run_retrieval_eval.py  run_ros_replay.py
scripts/: _extract_gray_blocks.py  _extract_real_tiles.py  _extract_velodyne_blocks.py  _extract_velodyne_from_head.py  _fetch_kitti_velodyne_seq00.py  benchmark_kitti_fusion.py  benchmark_kitti_lidar.py  benchmark_kitti_vpr.py  benchmark_kitti_vpr_learned.py  benchmark_nclt_cross_session.py  benchmark_nclt_lidar.py  experiment_icp_verification.py  experiment_scancontext_config.py  make_camera_bev_gif.py  make_camera_bev_map_gif.py  make_cross_session_figure.py  make_crossmodal_gif.py  make_fusion_figure.py  make_hero_gif.py  make_image_gif.py  make_results_summary.py
tests/: test_alignment.py  test_benchmarks.py  test_change.py  test_examples_smoke.py  test_integrations.py  test_maps.py  test_multimodal.py  test_pipeline.py  test_plugins.py  test_retrieval.py  test_ros.py  test_schema.py  test_spatial_loaders.py
