[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bevmatch"
version = "1.2.0"
description = "Same-Place Comparison OSS: retrieve, align, compare, and validate same-place observations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "BEVMatch contributors" }]
keywords = ["place-recognition", "localization", "lidar", "bev", "map-validation", "robotics"]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
viz = ["matplotlib>=3.6"]
faiss = ["faiss-cpu>=1.7"]
perf = ["scipy>=1.9"]  # KD-tree nearest neighbours for dense-cloud alignment
data = ["laspy>=2.0", "open3d>=0.16"]  # real point-cloud loaders (LAS / PCD)
dev = ["pytest>=7.0", "scipy>=1.9"]
# ROS2 integration (bevmatch.ros.node) needs rclpy, provided by a ROS2 install
# (e.g. ROS2 Jazzy), not pip. The pure-Python bevmatch.ros bridge needs nothing.

[project.urls]
Documentation = "https://github.com/your-org/BEVMatch/blob/main/docs/architecture.md"

[tool.setuptools.packages.find]
include = ["bevmatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
